kubernetes/apps/default/misc-ingress/app/mc-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: &host mc.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mc
                port:
                  number: 25565
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mc
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.100
    ports:
      - name: http
        port: 25565
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mc
  namespace: default
spec:
  ports:
    - name: http
      port: 25565
  type: ClusterIP
