kubernetes/apps/default/misc-ingress/app/mesh-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mesh
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: &host mesh.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mesh
                port:
                  number: 8086
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mesh
  namespace: default
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 8086
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mesh
  namespace: default
spec:
  ports:
    - name: http
      port: 8086
  type: ClusterIP
