kubernetes/apps/default/misc-ingress/app/meshcommander-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshcommander
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  ingressClassName: nginx
  rules:
    - host: &host mesh.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: meshcommander
                port:
                  number: 8086
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: meshcommander
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.100
    ports:
      - name: http
        port: 8086
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: meshcommander
  namespace: default
spec:
  ports:
    - name: http
      port: 8086
  type: ClusterIP
