kubernetes/apps/default/misc-ingress/app/plex-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/app-root: /web
spec:
  ingressClassName: external
  rules:
    - host: &host "plex-docker.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: plex
                port:
                  number: 32400
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
  namespace: default
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 32400
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
spec:
  ports:
    - name: http
      port: 32400
  type: ClusterIP
