kubernetes/apps/default/misc-ingress/app/tautulli-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    hajimari.io/enable: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "tautulli-docker.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tautulli
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.100
    ports:
      - name: http
        port: 8181
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: default
spec:
  ports:
    - name: http
      port: 8181
  type: ClusterIP
