kubernetes/apps/default/misc-ingress/app/transmission-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:download
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "transmission.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: transmission
                port:
                  number: 9091
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: transmission
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.100
    ports:
      - name: http
        port: 9091
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: default
spec:
  ports:
    - name: http
      port: 9091
  type: ClusterIP
